--- a/README
+++ b/README
@@ -1,6 +1,12 @@
 Netflix-Without-x
-is simply a website for all those who want to see movies , tv series and shows without getting annoyed by the nudity 
+is simply a webpage for all those who want to see movies , tv series and shows without getting annoyed by the nudity 
 or the wrong religous thoughts that the show director has
+
+in VERSION 2.0
+all those who watched the movies contain nudity sceanes on this webpage definitely
+will help others who wants to watch without annoyments 
 
 Programming Languages
 Javascript
+
+https://netflix-without-x.w3spaces.com/
